[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "curius"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["textual", "pandas", "requests"]

[project.scripts]
curius = "scripts.run_cli:main"

[tool.setuptools.package-data]
src = ["**/*.css"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*"]
